Closed
Bug 758481
Opened 13 years ago
Closed 13 years ago
When seeking in an unbuffered range after having ended a media, networkState is NETWORK_IDLE
Categories
(Core :: Audio/Video, defect)
Tracking
()
RESOLVED
FIXED
mozilla15
People
(Reporter: padenot, Assigned: padenot)
References
Details
Attachments
(1 file, 1 obsolete file)
|
3.14 KB,
patch
|
Details | Diff | Splinter Review |
STR :
1. Load a page containing a video ;
2. Start playing the video, the networkState is NETWORK_LOADING ;
3. Seek near the end of the video, the video will buffer from that point, and then the download finishes. The networkState is now NETWORK_IDLE ;
4. Seek in an unbuffered range, in the middle of the video.
Expected result :
Per spec [1], the networkState should be NETWORK_LOADING :
> NETWORK_LOADING (numeric value 2)
> The user agent is actively trying to download data.
Actual result :
networkState is NETWORK_IDLE.
I could reproduce this on current release, today's nightly. Not sure if it is a regression or it has always been like that.
| Assignee | ||
Updated•13 years ago
|
Assignee: nobody → paul
| Assignee | ||
Updated•13 years ago
|
Status: NEW → ASSIGNED
| Assignee | ||
Comment 1•13 years ago
|
||
I'm currently also (re)writing test_networkState.html to be sure not to regress here (considering the incoming stop download / resume download feature), but I need other change to land before I can write a reliable test.
Attachment #628233 -
Flags: review?(chris.double)
Comment 2•13 years ago
|
||
Comment on attachment 628233 [details] [diff] [review]
Patch v0 : When opening a channel, set the networkState to NETWORK_LOADING.
Review of attachment 628233 [details] [diff] [review]:
-----------------------------------------------------------------
::: content/html/content/public/nsHTMLMediaElement.h
@@ +155,5 @@
> // asked the decoder to resumed the download.
> + // If aForce is True, ignore the fact that the download has previously
> + // finished. We are downloading the middle of the media after having
> + // downloaded the end, we need to notify the element a download in ongoing.
> + void DownloadResumed(bool aForce = false);
Can we call this 'aForceNetworkLoading' or something like that? 'aForce' doesn't really explain what it does.
Attachment #628233 -
Flags: review?(chris.double) → review+
| Assignee | ||
Comment 3•13 years ago
|
||
Attachment #628233 -
Attachment is obsolete: true
| Assignee | ||
Updated•13 years ago
|
Keywords: checkin-needed
Comment 4•13 years ago
|
||
Keywords: checkin-needed
Target Milestone: --- → mozilla14
Comment 5•13 years ago
|
||
My apologies Paul, I had to fix a merge conflict and when committing and I forgot to set the author information for the patch to refer to you.
Updated•13 years ago
|
Target Milestone: mozilla14 → mozilla15
Comment 6•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•